# Scrapers

./: README.md  Readme.md  pawn_scraper.py
Job_posting_scraper/: remotive_scraper_algolia.py  working_nomads_web_scraper.py
Property_scraper/: fmls_scraper_selenium.py  offerpad_scraper_api.py
Zillow-Realtor-Redfin-Scraper/: README.md  pyproject.toml  sample.py
Zillow-Realtor-Redfin-Scraper/keyturn_property_scraper/redfin/: __init__.py  redfin_api.py  redfin_custom.py
Zillow-Realtor-Redfin-Scraper/keyturn_property_scraper/scrapers/: __init__.py  base.py  config.py  entrypoint.py  enums.py  exceptions.py  property.py  realtor.py  zillow.py
Zillow-Realtor-Redfin-Scraper/keyturn_property_scraper/scrapers/schemas/: __init__.py  base.py  realtor.py  zillow.py
